--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -92,6 +92,7 @@ noinst_PROGRAMS = diploid_ind$(EXEEXT) diploid_fixed_sh_ind$(EXEEXT) \
 	juvenile_migration$(EXEEXT) custom_mutation$(EXEEXT) \
 	custom_diploid$(EXEEXT) wfts_overlapping_generations$(EXEEXT) \
 	wfts_overlapping_generations_dynamic_indexing$(EXEEXT) \
+	wfts_overlapping_generations_dynamic_indexing_with_mutation$(EXEEXT) \
 	$(am__EXEEXT_1)
 
 # examples based on tree sequences that need boost program options
@@ -168,6 +169,12 @@ wfts_overlapping_generations_dynamic_indexing_OBJECTS =  \
 	$(am_wfts_overlapping_generations_dynamic_indexing_OBJECTS)
 wfts_overlapping_generations_dynamic_indexing_LDADD = $(LDADD)
 wfts_overlapping_generations_dynamic_indexing_DEPENDENCIES =
+am_wfts_overlapping_generations_dynamic_indexing_with_mutation_OBJECTS = wfts_overlapping_generations_dynamic_indexing_with_mutation.$(OBJEXT) \
+	wfevolvets.$(OBJEXT)
+wfts_overlapping_generations_dynamic_indexing_with_mutation_OBJECTS = $(am_wfts_overlapping_generations_dynamic_indexing_with_mutation_OBJECTS)
+wfts_overlapping_generations_dynamic_indexing_with_mutation_LDADD =  \
+	$(LDADD)
+wfts_overlapping_generations_dynamic_indexing_with_mutation_DEPENDENCIES =
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -191,7 +198,8 @@ am__depfiles_remade = ./$(DEPDIR)/K_linked_regions_extensions.Po \
 	./$(DEPDIR)/tree_sequence_examples_common.Po \
 	./$(DEPDIR)/wfevolvets.Po ./$(DEPDIR)/wfts_integration_test.Po \
 	./$(DEPDIR)/wfts_overlapping_generations.Po \
-	./$(DEPDIR)/wfts_overlapping_generations_dynamic_indexing.Po
+	./$(DEPDIR)/wfts_overlapping_generations_dynamic_indexing.Po \
+	./$(DEPDIR)/wfts_overlapping_generations_dynamic_indexing_with_mutation.Po
 am__mv = mv -f
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -225,7 +233,8 @@ SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(juvenile_migration_SOURCES) $(spatialts_SOURCES) \
 	$(wfts_integration_test_SOURCES) \
 	$(wfts_overlapping_generations_SOURCES) \
-	$(wfts_overlapping_generations_dynamic_indexing_SOURCES)
+	$(wfts_overlapping_generations_dynamic_indexing_SOURCES) \
+	$(wfts_overlapping_generations_dynamic_indexing_with_mutation_SOURCES)
 DIST_SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_generalized_rec_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
@@ -233,7 +242,8 @@ DIST_SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(juvenile_migration_SOURCES) $(am__spatialts_SOURCES_DIST) \
 	$(am__wfts_integration_test_SOURCES_DIST) \
 	$(wfts_overlapping_generations_SOURCES) \
-	$(wfts_overlapping_generations_dynamic_indexing_SOURCES)
+	$(wfts_overlapping_generations_dynamic_indexing_SOURCES) \
+	$(wfts_overlapping_generations_dynamic_indexing_with_mutation_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -367,6 +377,7 @@ custom_mutation_SOURCES = custom_mutation.cc common_ind.hpp
 custom_diploid_SOURCES = custom_diploid.cc common_ind.hpp
 wfts_overlapping_generations_SOURCES = wfts_overlapping_generations.cc wfevolvets.cc wfevolvets.hpp
 wfts_overlapping_generations_dynamic_indexing_SOURCES = wfts_overlapping_generations_dynamic_indexing.cc wfevolvets.cc wfevolvets.hpp
+wfts_overlapping_generations_dynamic_indexing_with_mutation_SOURCES = wfts_overlapping_generations_dynamic_indexing_with_mutation.cc wfevolvets.cc wfevolvets.hpp
 @BPO_PRESENT_TRUE@wfts_integration_test_SOURCES = wfts_integration_test.cc tree_sequence_examples_common.cc
 @BPO_PRESENT_TRUE@wfts_integration_test_LDADD = -lboost_program_options
 @BPO_PRESENT_TRUE@spatialts_SOURCES = spatialts.cc
@@ -456,6 +467,10 @@ wfts_overlapping_generations_dynamic_indexing$(EXEEXT): $(wfts_overlapping_gener
 	@rm -f wfts_overlapping_generations_dynamic_indexing$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(wfts_overlapping_generations_dynamic_indexing_OBJECTS) $(wfts_overlapping_generations_dynamic_indexing_LDADD) $(LIBS)
 
+wfts_overlapping_generations_dynamic_indexing_with_mutation$(EXEEXT): $(wfts_overlapping_generations_dynamic_indexing_with_mutation_OBJECTS) $(wfts_overlapping_generations_dynamic_indexing_with_mutation_DEPENDENCIES) $(EXTRA_wfts_overlapping_generations_dynamic_indexing_with_mutation_DEPENDENCIES) 
+	@rm -f wfts_overlapping_generations_dynamic_indexing_with_mutation$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(wfts_overlapping_generations_dynamic_indexing_with_mutation_OBJECTS) $(wfts_overlapping_generations_dynamic_indexing_with_mutation_LDADD) $(LIBS)
+
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 
@@ -475,6 +490,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfts_integration_test.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfts_overlapping_generations.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfts_overlapping_generations_dynamic_indexing.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfts_overlapping_generations_dynamic_indexing_with_mutation.Po@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -635,6 +651,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/wfts_integration_test.Po
 	-rm -f ./$(DEPDIR)/wfts_overlapping_generations.Po
 	-rm -f ./$(DEPDIR)/wfts_overlapping_generations_dynamic_indexing.Po
+	-rm -f ./$(DEPDIR)/wfts_overlapping_generations_dynamic_indexing_with_mutation.Po
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -693,6 +710,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/wfts_integration_test.Po
 	-rm -f ./$(DEPDIR)/wfts_overlapping_generations.Po
 	-rm -f ./$(DEPDIR)/wfts_overlapping_generations_dynamic_indexing.Po
+	-rm -f ./$(DEPDIR)/wfts_overlapping_generations_dynamic_indexing_with_mutation.Po
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
