--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -7,7 +7,8 @@ noinst_PROGRAMS=	diploid_ind \
 	custom_diploid \
 	wfts_overlapping_generations \
 	wfts_overlapping_generations_dynamic_indexing \
-	wfts_overlapping_generations_dynamic_indexing_with_mutation
+	wfts_overlapping_generations_dynamic_indexing_with_mutation \
+	load_table_collection
 
 
 diploid_ind_SOURCES=diploid_ind.cc common_ind.hpp
@@ -20,6 +21,7 @@ custom_diploid_SOURCES=custom_diploid.cc common_ind.hpp
 wfts_overlapping_generations_SOURCES=wfts_overlapping_generations.cc wfevolvets.cc wfevolvets.hpp
 wfts_overlapping_generations_dynamic_indexing_SOURCES=wfts_overlapping_generations_dynamic_indexing.cc wfevolvets.cc wfevolvets.hpp
 wfts_overlapping_generations_dynamic_indexing_with_mutation_SOURCES=wfts_overlapping_generations_dynamic_indexing_with_mutation.cc wfevolvets.cc wfevolvets.hpp
+load_table_collection_SOURCES=load_table_collection.cc
 
 # examples based on tree sequences that need boost program options
 if BPO_PRESENT
