--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -93,7 +93,7 @@ noinst_PROGRAMS = diploid_ind$(EXEEXT) diploid_fixed_sh_ind$(EXEEXT) \
 	custom_diploid$(EXEEXT) wfts_overlapping_generations$(EXEEXT) \
 	wfts_overlapping_generations_dynamic_indexing$(EXEEXT) \
 	wfts_overlapping_generations_dynamic_indexing_with_mutation$(EXEEXT) \
-	$(am__EXEEXT_1)
+	load_table_collection$(EXEEXT) $(am__EXEEXT_1)
 
 # examples based on tree sequences that need boost program options
 @BPO_PRESENT_TRUE@am__append_1 = wfts_integration_test spatialts
@@ -145,6 +145,10 @@ am_juvenile_migration_OBJECTS = juvenile_migration.$(OBJEXT)
 juvenile_migration_OBJECTS = $(am_juvenile_migration_OBJECTS)
 juvenile_migration_LDADD = $(LDADD)
 juvenile_migration_DEPENDENCIES =
+am_load_table_collection_OBJECTS = load_table_collection.$(OBJEXT)
+load_table_collection_OBJECTS = $(am_load_table_collection_OBJECTS)
+load_table_collection_LDADD = $(LDADD)
+load_table_collection_DEPENDENCIES =
 am__spatialts_SOURCES_DIST = spatialts.cc
 @BPO_PRESENT_TRUE@am_spatialts_OBJECTS = spatialts.$(OBJEXT)
 spatialts_OBJECTS = $(am_spatialts_OBJECTS)
@@ -194,7 +198,8 @@ am__depfiles_remade = ./$(DEPDIR)/K_linked_regions_extensions.Po \
 	./$(DEPDIR)/K_linked_regions_generalized_rec.Po \
 	./$(DEPDIR)/custom_diploid.Po ./$(DEPDIR)/custom_mutation.Po \
 	./$(DEPDIR)/diploid_fixed_sh_ind.Po ./$(DEPDIR)/diploid_ind.Po \
-	./$(DEPDIR)/juvenile_migration.Po ./$(DEPDIR)/spatialts.Po \
+	./$(DEPDIR)/juvenile_migration.Po \
+	./$(DEPDIR)/load_table_collection.Po ./$(DEPDIR)/spatialts.Po \
 	./$(DEPDIR)/tree_sequence_examples_common.Po \
 	./$(DEPDIR)/wfevolvets.Po ./$(DEPDIR)/wfts_integration_test.Po \
 	./$(DEPDIR)/wfts_overlapping_generations.Po \
@@ -230,8 +235,8 @@ SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_generalized_rec_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
-	$(juvenile_migration_SOURCES) $(spatialts_SOURCES) \
-	$(wfts_integration_test_SOURCES) \
+	$(juvenile_migration_SOURCES) $(load_table_collection_SOURCES) \
+	$(spatialts_SOURCES) $(wfts_integration_test_SOURCES) \
 	$(wfts_overlapping_generations_SOURCES) \
 	$(wfts_overlapping_generations_dynamic_indexing_SOURCES) \
 	$(wfts_overlapping_generations_dynamic_indexing_with_mutation_SOURCES)
@@ -239,7 +244,8 @@ DIST_SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_generalized_rec_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
-	$(juvenile_migration_SOURCES) $(am__spatialts_SOURCES_DIST) \
+	$(juvenile_migration_SOURCES) $(load_table_collection_SOURCES) \
+	$(am__spatialts_SOURCES_DIST) \
 	$(am__wfts_integration_test_SOURCES_DIST) \
 	$(wfts_overlapping_generations_SOURCES) \
 	$(wfts_overlapping_generations_dynamic_indexing_SOURCES) \
@@ -378,6 +384,7 @@ custom_diploid_SOURCES = custom_diploid.cc common_ind.hpp
 wfts_overlapping_generations_SOURCES = wfts_overlapping_generations.cc wfevolvets.cc wfevolvets.hpp
 wfts_overlapping_generations_dynamic_indexing_SOURCES = wfts_overlapping_generations_dynamic_indexing.cc wfevolvets.cc wfevolvets.hpp
 wfts_overlapping_generations_dynamic_indexing_with_mutation_SOURCES = wfts_overlapping_generations_dynamic_indexing_with_mutation.cc wfevolvets.cc wfevolvets.hpp
+load_table_collection_SOURCES = load_table_collection.cc
 @BPO_PRESENT_TRUE@wfts_integration_test_SOURCES = wfts_integration_test.cc tree_sequence_examples_common.cc
 @BPO_PRESENT_TRUE@wfts_integration_test_LDADD = -lboost_program_options
 @BPO_PRESENT_TRUE@spatialts_SOURCES = spatialts.cc
@@ -451,6 +458,10 @@ juvenile_migration$(EXEEXT): $(juvenile_migration_OBJECTS) $(juvenile_migration_
 	@rm -f juvenile_migration$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(juvenile_migration_OBJECTS) $(juvenile_migration_LDADD) $(LIBS)
 
+load_table_collection$(EXEEXT): $(load_table_collection_OBJECTS) $(load_table_collection_DEPENDENCIES) $(EXTRA_load_table_collection_DEPENDENCIES) 
+	@rm -f load_table_collection$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(load_table_collection_OBJECTS) $(load_table_collection_LDADD) $(LIBS)
+
 spatialts$(EXEEXT): $(spatialts_OBJECTS) $(spatialts_DEPENDENCIES) $(EXTRA_spatialts_DEPENDENCIES) 
 	@rm -f spatialts$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(spatialts_OBJECTS) $(spatialts_LDADD) $(LIBS)
@@ -484,6 +495,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_fixed_sh_ind.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_ind.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/juvenile_migration.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/load_table_collection.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/spatialts.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tree_sequence_examples_common.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfevolvets.Po@am__quote@ # am--include-marker
@@ -645,6 +657,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/diploid_fixed_sh_ind.Po
 	-rm -f ./$(DEPDIR)/diploid_ind.Po
 	-rm -f ./$(DEPDIR)/juvenile_migration.Po
+	-rm -f ./$(DEPDIR)/load_table_collection.Po
 	-rm -f ./$(DEPDIR)/spatialts.Po
 	-rm -f ./$(DEPDIR)/tree_sequence_examples_common.Po
 	-rm -f ./$(DEPDIR)/wfevolvets.Po
@@ -704,6 +717,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/diploid_fixed_sh_ind.Po
 	-rm -f ./$(DEPDIR)/diploid_ind.Po
 	-rm -f ./$(DEPDIR)/juvenile_migration.Po
+	-rm -f ./$(DEPDIR)/load_table_collection.Po
 	-rm -f ./$(DEPDIR)/spatialts.Po
 	-rm -f ./$(DEPDIR)/tree_sequence_examples_common.Po
 	-rm -f ./$(DEPDIR)/wfevolvets.Po
