--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,3 +37,9 @@ jobs:
           name: Run test suite
           command: |
               make check -j 2
+
+      - run:
+          name: Run example programs
+          command: |
+              ./examples/wfts_overlapping_generations 1000 1000 0.999 0.0 100 666
+              ./examples/wfts_overlapping_generations 1000 1000 0.999 0.25 100 42
