--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -169,7 +169,6 @@ am__unit_fwdpp_unit_tests_SOURCES_DIST = unit/fwdpp_unit_tests.cc \
 	unit/mutateTest.cc unit/gameteTest.cc unit/utilTest.cc \
 	unit/type_traitsTest.cc unit/siteDepFitnessTest.cc \
 	unit/serializationTest.cc unit/gamete_cleanerTest.cc \
-	unit/test_general_rec_variation.cc \
 	unit/test_mutate_recombine.cc unit/test_sampling.cc \
 	unit/test_simparams.cc unit/test_wrapped_range.cc \
 	unit/test_recombination.cc fixtures/sugar_fixtures.cc
@@ -182,7 +181,6 @@ am__unit_fwdpp_unit_tests_SOURCES_DIST = unit/fwdpp_unit_tests.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/siteDepFitnessTest.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/serializationTest.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/gamete_cleanerTest.$(OBJEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	unit/test_general_rec_variation.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_mutate_recombine.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_sampling.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_simparams.$(OBJEXT) \
@@ -264,7 +262,6 @@ am__depfiles_remade = fixtures/$(DEPDIR)/sugar_fixtures.Po \
 	unit/$(DEPDIR)/sugar_construct_pops.Po \
 	unit/$(DEPDIR)/sugar_popgenmut.Po \
 	unit/$(DEPDIR)/sugar_unit_tests.Po \
-	unit/$(DEPDIR)/test_general_rec_variation.Po \
 	unit/$(DEPDIR)/test_genetic_map.Po \
 	unit/$(DEPDIR)/test_mutate_recombine.Po \
 	unit/$(DEPDIR)/test_recombination.Po \
@@ -633,7 +630,7 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@TESTS = $(noinst_PROGRAMS)
 
 #Unit test targets:
-@BUNIT_TEST_PRESENT_TRUE@unit_fwdpp_unit_tests_SOURCES = unit/fwdpp_unit_tests.cc unit/mutateTest.cc unit/gameteTest.cc unit/utilTest.cc unit/type_traitsTest.cc unit/siteDepFitnessTest.cc unit/serializationTest.cc unit/gamete_cleanerTest.cc unit/test_general_rec_variation.cc \
+@BUNIT_TEST_PRESENT_TRUE@unit_fwdpp_unit_tests_SOURCES = unit/fwdpp_unit_tests.cc unit/mutateTest.cc unit/gameteTest.cc unit/utilTest.cc unit/type_traitsTest.cc unit/siteDepFitnessTest.cc unit/serializationTest.cc unit/gamete_cleanerTest.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_mutate_recombine.cc unit/test_sampling.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_simparams.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_wrapped_range.cc \
@@ -837,8 +834,6 @@ unit/serializationTest.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
 unit/gamete_cleanerTest.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
-unit/test_general_rec_variation.$(OBJEXT): unit/$(am__dirstamp) \
-	unit/$(DEPDIR)/$(am__dirstamp)
 unit/test_mutate_recombine.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
 unit/test_sampling.$(OBJEXT): unit/$(am__dirstamp) \
@@ -925,7 +920,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_construct_pops.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_popgenmut.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_unit_tests.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_general_rec_variation.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_genetic_map.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_mutate_recombine.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_recombination.Po@am__quote@ # am--include-marker
@@ -1328,7 +1322,6 @@ distclean: distclean-am
 	-rm -f unit/$(DEPDIR)/sugar_construct_pops.Po
 	-rm -f unit/$(DEPDIR)/sugar_popgenmut.Po
 	-rm -f unit/$(DEPDIR)/sugar_unit_tests.Po
-	-rm -f unit/$(DEPDIR)/test_general_rec_variation.Po
 	-rm -f unit/$(DEPDIR)/test_genetic_map.Po
 	-rm -f unit/$(DEPDIR)/test_mutate_recombine.Po
 	-rm -f unit/$(DEPDIR)/test_recombination.Po
@@ -1419,7 +1412,6 @@ maintainer-clean: maintainer-clean-am
 	-rm -f unit/$(DEPDIR)/sugar_construct_pops.Po
 	-rm -f unit/$(DEPDIR)/sugar_popgenmut.Po
 	-rm -f unit/$(DEPDIR)/sugar_unit_tests.Po
-	-rm -f unit/$(DEPDIR)/test_general_rec_variation.Po
 	-rm -f unit/$(DEPDIR)/test_genetic_map.Po
 	-rm -f unit/$(DEPDIR)/test_mutate_recombine.Po
 	-rm -f unit/$(DEPDIR)/test_recombination.Po
