update build system for 0.8.1

--- a/Makefile.in
+++ b/Makefile.in
@@ -303,7 +303,7 @@ top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
 SUBDIRS = fwdpp examples testsuite src
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp python_examples/*.cc python_examples/*.py LICENSE 
+EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp LICENSE 
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
