--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 AUTOMAKE_OPTIONS = foreign
 SUBDIRS=fwdpp examples testsuite src
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST=doc/fwdpp.doxygen examples/*.cc examples/*.hpp python_examples/*.cc python_examples/*.py LICENSE 
+EXTRA_DIST=doc/fwdpp.doxygen examples/*.cc examples/*.hpp LICENSE 
