--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -169,9 +169,9 @@ am__unit_fwdpp_unit_tests_SOURCES_DIST = unit/fwdpp_unit_tests.cc \
 	unit/mutateTest.cc unit/gameteTest.cc unit/utilTest.cc \
 	unit/type_traitsTest.cc unit/siteDepFitnessTest.cc \
 	unit/serializationTest.cc unit/gamete_cleanerTest.cc \
-	unit/test_mutate_recombine.cc unit/test_sampling.cc \
-	unit/test_simparams.cc unit/test_wrapped_range.cc \
-	unit/test_recombination.cc fixtures/sugar_fixtures.cc
+	unit/test_mutate_recombine.cc unit/test_simparams.cc \
+	unit/test_wrapped_range.cc unit/test_recombination.cc \
+	fixtures/sugar_fixtures.cc
 @BUNIT_TEST_PRESENT_TRUE@am_unit_fwdpp_unit_tests_OBJECTS =  \
 @BUNIT_TEST_PRESENT_TRUE@	unit/fwdpp_unit_tests.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/mutateTest.$(OBJEXT) \
@@ -182,7 +182,6 @@ am__unit_fwdpp_unit_tests_SOURCES_DIST = unit/fwdpp_unit_tests.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/serializationTest.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/gamete_cleanerTest.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_mutate_recombine.$(OBJEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	unit/test_sampling.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_simparams.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_wrapped_range.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_recombination.$(OBJEXT) \
@@ -198,14 +197,13 @@ unit_genetic_map_tests_OBJECTS = $(am_unit_genetic_map_tests_OBJECTS)
 unit_genetic_map_tests_LDADD = $(LDADD)
 am__unit_sugar_unit_tests_SOURCES_DIST = unit/sugar_unit_tests.cc \
 	unit/sugar_GSLrngTest.cc unit/sugar_add_mutationTest.cc \
-	unit/sugar_change_neutralTest.cc unit/sugar_construct_pops.cc \
-	unit/sugar_popgenmut.cc fixtures/sugar_fixtures.cc
+	unit/sugar_change_neutralTest.cc unit/sugar_popgenmut.cc \
+	fixtures/sugar_fixtures.cc
 @BUNIT_TEST_PRESENT_TRUE@am_unit_sugar_unit_tests_OBJECTS =  \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_unit_tests.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_GSLrngTest.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_add_mutationTest.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_change_neutralTest.$(OBJEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	unit/sugar_construct_pops.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_popgenmut.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	fixtures/sugar_fixtures.$(OBJEXT)
 unit_sugar_unit_tests_OBJECTS = $(am_unit_sugar_unit_tests_OBJECTS)
@@ -259,13 +257,11 @@ am__depfiles_remade = fixtures/$(DEPDIR)/sugar_fixtures.Po \
 	unit/$(DEPDIR)/sugar_GSLrngTest.Po \
 	unit/$(DEPDIR)/sugar_add_mutationTest.Po \
 	unit/$(DEPDIR)/sugar_change_neutralTest.Po \
-	unit/$(DEPDIR)/sugar_construct_pops.Po \
 	unit/$(DEPDIR)/sugar_popgenmut.Po \
 	unit/$(DEPDIR)/sugar_unit_tests.Po \
 	unit/$(DEPDIR)/test_genetic_map.Po \
 	unit/$(DEPDIR)/test_mutate_recombine.Po \
 	unit/$(DEPDIR)/test_recombination.Po \
-	unit/$(DEPDIR)/test_sampling.Po \
 	unit/$(DEPDIR)/test_simparams.Po \
 	unit/$(DEPDIR)/test_wrapped_range.Po \
 	unit/$(DEPDIR)/type_traitsTest.Po unit/$(DEPDIR)/utilTest.Po
@@ -631,7 +627,7 @@ top_srcdir = @top_srcdir@
 
 #Unit test targets:
 @BUNIT_TEST_PRESENT_TRUE@unit_fwdpp_unit_tests_SOURCES = unit/fwdpp_unit_tests.cc unit/mutateTest.cc unit/gameteTest.cc unit/utilTest.cc unit/type_traitsTest.cc unit/siteDepFitnessTest.cc unit/serializationTest.cc unit/gamete_cleanerTest.cc \
-@BUNIT_TEST_PRESENT_TRUE@	unit/test_mutate_recombine.cc unit/test_sampling.cc \
+@BUNIT_TEST_PRESENT_TRUE@	unit/test_mutate_recombine.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_simparams.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_wrapped_range.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_recombination.cc \
@@ -645,7 +641,6 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_GSLrngTest.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_add_mutationTest.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_change_neutralTest.cc \
-@BUNIT_TEST_PRESENT_TRUE@	unit/sugar_construct_pops.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_popgenmut.cc \
 @BUNIT_TEST_PRESENT_TRUE@	fixtures/sugar_fixtures.cc
 
@@ -836,8 +831,6 @@ unit/gamete_cleanerTest.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
 unit/test_mutate_recombine.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
-unit/test_sampling.$(OBJEXT): unit/$(am__dirstamp) \
-	unit/$(DEPDIR)/$(am__dirstamp)
 unit/test_simparams.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
 unit/test_wrapped_range.$(OBJEXT): unit/$(am__dirstamp) \
@@ -863,8 +856,6 @@ unit/sugar_GSLrngTest.$(OBJEXT): unit/$(am__dirstamp) \
 unit/sugar_add_mutationTest.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
 unit/sugar_change_neutralTest.$(OBJEXT): unit/$(am__dirstamp) \
-	unit/$(DEPDIR)/$(am__dirstamp)
-unit/sugar_construct_pops.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
 unit/sugar_popgenmut.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
@@ -917,13 +908,11 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_GSLrngTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_add_mutationTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_change_neutralTest.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_construct_pops.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_popgenmut.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_unit_tests.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_genetic_map.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_mutate_recombine.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_recombination.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_sampling.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_simparams.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_wrapped_range.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/type_traitsTest.Po@am__quote@ # am--include-marker
@@ -1319,13 +1308,11 @@ distclean: distclean-am
 	-rm -f unit/$(DEPDIR)/sugar_GSLrngTest.Po
 	-rm -f unit/$(DEPDIR)/sugar_add_mutationTest.Po
 	-rm -f unit/$(DEPDIR)/sugar_change_neutralTest.Po
-	-rm -f unit/$(DEPDIR)/sugar_construct_pops.Po
 	-rm -f unit/$(DEPDIR)/sugar_popgenmut.Po
 	-rm -f unit/$(DEPDIR)/sugar_unit_tests.Po
 	-rm -f unit/$(DEPDIR)/test_genetic_map.Po
 	-rm -f unit/$(DEPDIR)/test_mutate_recombine.Po
 	-rm -f unit/$(DEPDIR)/test_recombination.Po
-	-rm -f unit/$(DEPDIR)/test_sampling.Po
 	-rm -f unit/$(DEPDIR)/test_simparams.Po
 	-rm -f unit/$(DEPDIR)/test_wrapped_range.Po
 	-rm -f unit/$(DEPDIR)/type_traitsTest.Po
@@ -1409,13 +1396,11 @@ maintainer-clean: maintainer-clean-am
 	-rm -f unit/$(DEPDIR)/sugar_GSLrngTest.Po
 	-rm -f unit/$(DEPDIR)/sugar_add_mutationTest.Po
 	-rm -f unit/$(DEPDIR)/sugar_change_neutralTest.Po
-	-rm -f unit/$(DEPDIR)/sugar_construct_pops.Po
 	-rm -f unit/$(DEPDIR)/sugar_popgenmut.Po
 	-rm -f unit/$(DEPDIR)/sugar_unit_tests.Po
 	-rm -f unit/$(DEPDIR)/test_genetic_map.Po
 	-rm -f unit/$(DEPDIR)/test_mutate_recombine.Po
 	-rm -f unit/$(DEPDIR)/test_recombination.Po
-	-rm -f unit/$(DEPDIR)/test_sampling.Po
 	-rm -f unit/$(DEPDIR)/test_simparams.Po
 	-rm -f unit/$(DEPDIR)/test_wrapped_range.Po
 	-rm -f unit/$(DEPDIR)/type_traitsTest.Po
