Extract the implementation details of simplification to a new namespace and provide standalone functions to simplify tables. The current table_simplifier class remains as an easier interface.
Also update the YCM config file.

Closes #230

--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -315,6 +315,7 @@ pkginclude_HEADERS = definitions.hpp \
 			table_collection.hpp \
 			std_table_collection.hpp \
 			table_simplifier.hpp \
+			simplify_tables.hpp \
 			get_parent_ids.hpp \
 			generate_data_matrix.hpp \
 			indexed_edge.hpp \
