--- a/fwdpp/ts/simplification/Makefile.am
+++ b/fwdpp/ts/simplification/Makefile.am
@@ -1,4 +1,3 @@
 pkgincludedir=$(prefix)/include/fwdpp/ts/simplification
 
-pkginclude_HEADERS=segment.hpp \
-				   ancestry_list.hpp
+pkginclude_HEADERS=simplification.hpp
