--- a/fwdpp/ts/simplification/Makefile.in
+++ b/fwdpp/ts/simplification/Makefile.in
@@ -265,9 +265,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkginclude_HEADERS = segment.hpp \
-				   ancestry_list.hpp
-
+pkginclude_HEADERS = simplification.hpp
 all: all-am
 
 .SUFFIXES:
