--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,20 @@ matrix:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
         - CXXSTANDARD="c++14"
 
+    - os: osx 
+      osx_image: xcode9.4
+      language: generic
+      env:
+        - USECONDA=1
+        - CXXSTANDARD="c++14"
+
+    - os: osx 
+      osx_image: xcode9.4
+      language: generic
+      env:
+        - USECONDA=1
+        - CXXSTANDARD="c++17"
+
 before_install:
     - eval "${MATRIX_EVAL}"
 #     - os: osx 
