Move code for recording nodes/edges for diploid births to new header.

--- a/fwdpp/ts/recording/Makefile.am
+++ b/fwdpp/ts/recording/Makefile.am
@@ -1,5 +1,6 @@
 pkgincludedir=$(prefix)/include/fwdpp/ts/recording
 
 pkginclude_HEADERS=edge_buffer.hpp \
-				   mutations.hpp
+				   mutations.hpp \
+				   diploid_offspring.hpp
 
