--- a/fwdpp/ts/recording/Makefile.in
+++ b/fwdpp/ts/recording/Makefile.in
@@ -267,7 +267,8 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 pkginclude_HEADERS = edge_buffer.hpp \
-				   mutations.hpp
+				   mutations.hpp \
+				   diploid_offspring.hpp
 
 all: all-am
 
