--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -36,8 +36,17 @@ integration_sugar_integration_tests_SOURCES=integration/sugar_integration_tests.
 
 # integration_extensions_integration_tests_SOURCES=integration/extensions_integration_tests.cc integration/extensions_regionsIntegrationTest.cc \
 # 	fixtures/sugar_fixtures.cc
+tskit_SOURCES=../subprojects/nongpl/tskit/c/tskit/convert.c \
+			  ../subprojects/nongpl/tskit/c/tskit/core.c \
+			  ../subprojects/nongpl/tskit/c/tskit/genotypes.c \
+			  ../subprojects/nongpl/tskit/c/tskit/haplotype_matching.c \
+			  ../subprojects/nongpl/tskit/c/tskit/stats.c \
+			  ../subprojects/nongpl/tskit/c/tskit/tables.c \
+			  ../subprojects/nongpl/tskit/c/tskit/trees.c \
+			  ../subprojects/nongpl/tskit/c/subprojects/kastore/kastore.c
 
 tree_sequences_tree_sequence_tests_SOURCES=tree_sequences/tree_sequence_tests.cc \
+										${tskit_SOURCES} \
 										tree_sequences/test_generate_offspring.cc \
 									    tree_sequences/test_preorder_node_traversal.cc \
 										tree_sequences/test_tree_visitor.cc \
@@ -56,6 +65,9 @@ tree_sequences_tree_sequence_tests_SOURCES=tree_sequences/tree_sequence_tests.cc
 										tree_sequences/test_ancestry_list.cc \
 										tree_sequences/test_diploid_recording.cc
 
+tree_sequences_tree_sequence_tests_CFLAGS=-std=c99
+
+AM_CPPFLAGS=-I../subprojects/nongpl/tskit/c -I../subprojects/nongpl/tskit/c/subprojects/kastore
 AM_CXXFLAGS=-W -Wall
 
 #AM_LIBS=-lboost_unit_test_framework
