Add Wright-Fisher simulation code to test suite. Closes #222.
Add some simplistic tskit utilities to the test suite.

Add functions to test topologies of edge sorting
vs edge buffering.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -63,7 +63,10 @@ tree_sequences_tree_sequence_tests_SOURCES=tree_sequences/tree_sequence_tests.cc
 										tree_sequences/test_site_visitor.cc \
 										tree_sequences/test_marginal_tree.cc \
 										tree_sequences/test_ancestry_list.cc \
-										tree_sequences/test_diploid_recording.cc
+										tree_sequences/test_diploid_recording.cc \
+										tree_sequences/wfevolve_table_collection_fxns.cc \
+										tree_sequences/test_edge_buffering_std_table_collection.cc \
+										tree_sequences/tskit_utils.cc
 
 tree_sequences_tree_sequence_tests_CFLAGS=-std=c99
 
