--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -143,7 +143,10 @@ am__tree_sequences_tree_sequence_tests_SOURCES_DIST =  \
 	tree_sequences/test_site_visitor.cc \
 	tree_sequences/test_marginal_tree.cc \
 	tree_sequences/test_ancestry_list.cc \
-	tree_sequences/test_diploid_recording.cc
+	tree_sequences/test_diploid_recording.cc \
+	tree_sequences/wfevolve_table_collection_fxns.cc \
+	tree_sequences/test_edge_buffering_std_table_collection.cc \
+	tree_sequences/tskit_utils.cc
 @BUNIT_TEST_PRESENT_TRUE@am__objects_1 = ../subprojects/nongpl/tskit/c/tskit/tree_sequences_tree_sequence_tests-convert.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	../subprojects/nongpl/tskit/c/tskit/tree_sequences_tree_sequence_tests-core.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	../subprojects/nongpl/tskit/c/tskit/tree_sequences_tree_sequence_tests-genotypes.$(OBJEXT) \
@@ -170,7 +173,10 @@ am__tree_sequences_tree_sequence_tests_SOURCES_DIST =  \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_site_visitor.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_marginal_tree.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_ancestry_list.$(OBJEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_diploid_recording.$(OBJEXT)
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_diploid_recording.$(OBJEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/wfevolve_table_collection_fxns.$(OBJEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_edge_buffering_std_table_collection.$(OBJEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/tskit_utils.$(OBJEXT)
 tree_sequences_tree_sequence_tests_OBJECTS =  \
 	$(am_tree_sequences_tree_sequence_tests_OBJECTS)
 tree_sequences_tree_sequence_tests_LDADD = $(LDADD)
@@ -258,6 +264,7 @@ am__depfiles_remade = ../subprojects/nongpl/tskit/c/subprojects/kastore/$(DEPDIR
 	tree_sequences/$(DEPDIR)/test_ancestry_list.Po \
 	tree_sequences/$(DEPDIR)/test_decapitate.Po \
 	tree_sequences/$(DEPDIR)/test_diploid_recording.Po \
+	tree_sequences/$(DEPDIR)/test_edge_buffering_std_table_collection.Po \
 	tree_sequences/$(DEPDIR)/test_generate_data_matrix.Po \
 	tree_sequences/$(DEPDIR)/test_generate_offspring.Po \
 	tree_sequences/$(DEPDIR)/test_marginal_tree.Po \
@@ -272,6 +279,8 @@ am__depfiles_remade = ../subprojects/nongpl/tskit/c/subprojects/kastore/$(DEPDIR
 	tree_sequences/$(DEPDIR)/test_tree_visitor.Po \
 	tree_sequences/$(DEPDIR)/test_visit_sites.Po \
 	tree_sequences/$(DEPDIR)/tree_sequence_tests.Po \
+	tree_sequences/$(DEPDIR)/tskit_utils.Po \
+	tree_sequences/$(DEPDIR)/wfevolve_table_collection_fxns.Po \
 	unit/$(DEPDIR)/extensions_callbacksTest.Po \
 	unit/$(DEPDIR)/extensions_regionsTest.Po \
 	unit/$(DEPDIR)/extensions_unit_test.Po \
@@ -726,7 +735,10 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_site_visitor.cc \
 @BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_marginal_tree.cc \
 @BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_ancestry_list.cc \
-@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_diploid_recording.cc
+@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_diploid_recording.cc \
+@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/wfevolve_table_collection_fxns.cc \
+@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_edge_buffering_std_table_collection.cc \
+@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/tskit_utils.cc
 
 @BUNIT_TEST_PRESENT_TRUE@tree_sequences_tree_sequence_tests_CFLAGS = -std=c99
 @BUNIT_TEST_PRESENT_TRUE@AM_CPPFLAGS = -I../subprojects/nongpl/tskit/c -I../subprojects/nongpl/tskit/c/subprojects/kastore
@@ -889,6 +901,14 @@ tree_sequences/test_ancestry_list.$(OBJEXT):  \
 tree_sequences/test_diploid_recording.$(OBJEXT):  \
 	tree_sequences/$(am__dirstamp) \
 	tree_sequences/$(DEPDIR)/$(am__dirstamp)
+tree_sequences/wfevolve_table_collection_fxns.$(OBJEXT):  \
+	tree_sequences/$(am__dirstamp) \
+	tree_sequences/$(DEPDIR)/$(am__dirstamp)
+tree_sequences/test_edge_buffering_std_table_collection.$(OBJEXT):  \
+	tree_sequences/$(am__dirstamp) \
+	tree_sequences/$(DEPDIR)/$(am__dirstamp)
+tree_sequences/tskit_utils.$(OBJEXT): tree_sequences/$(am__dirstamp) \
+	tree_sequences/$(DEPDIR)/$(am__dirstamp)
 
 tree_sequences/tree_sequence_tests$(EXEEXT): $(tree_sequences_tree_sequence_tests_OBJECTS) $(tree_sequences_tree_sequence_tests_DEPENDENCIES) $(EXTRA_tree_sequences_tree_sequence_tests_DEPENDENCIES) tree_sequences/$(am__dirstamp)
 	@rm -f tree_sequences/tree_sequence_tests$(EXEEXT)
@@ -988,6 +1008,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_ancestry_list.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_decapitate.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_diploid_recording.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_edge_buffering_std_table_collection.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_generate_data_matrix.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_generate_offspring.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_marginal_tree.Po@am__quote@ # am--include-marker
@@ -1002,6 +1023,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_tree_visitor.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_visit_sites.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/tree_sequence_tests.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/tskit_utils.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/wfevolve_table_collection_fxns.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_callbacksTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_regionsTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_unit_test.Po@am__quote@ # am--include-marker
@@ -1529,6 +1552,7 @@ distclean: distclean-am
 	-rm -f tree_sequences/$(DEPDIR)/test_ancestry_list.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_decapitate.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_diploid_recording.Po
+	-rm -f tree_sequences/$(DEPDIR)/test_edge_buffering_std_table_collection.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_generate_data_matrix.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_generate_offspring.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_marginal_tree.Po
@@ -1543,6 +1567,8 @@ distclean: distclean-am
 	-rm -f tree_sequences/$(DEPDIR)/test_tree_visitor.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_visit_sites.Po
 	-rm -f tree_sequences/$(DEPDIR)/tree_sequence_tests.Po
+	-rm -f tree_sequences/$(DEPDIR)/tskit_utils.Po
+	-rm -f tree_sequences/$(DEPDIR)/wfevolve_table_collection_fxns.Po
 	-rm -f unit/$(DEPDIR)/extensions_callbacksTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_regionsTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_unit_test.Po
@@ -1626,6 +1652,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f tree_sequences/$(DEPDIR)/test_ancestry_list.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_decapitate.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_diploid_recording.Po
+	-rm -f tree_sequences/$(DEPDIR)/test_edge_buffering_std_table_collection.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_generate_data_matrix.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_generate_offspring.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_marginal_tree.Po
@@ -1640,6 +1667,8 @@ maintainer-clean: maintainer-clean-am
 	-rm -f tree_sequences/$(DEPDIR)/test_tree_visitor.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_visit_sites.Po
 	-rm -f tree_sequences/$(DEPDIR)/tree_sequence_tests.Po
+	-rm -f tree_sequences/$(DEPDIR)/tskit_utils.Po
+	-rm -f tree_sequences/$(DEPDIR)/wfevolve_table_collection_fxns.Po
 	-rm -f unit/$(DEPDIR)/extensions_callbacksTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_regionsTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_unit_test.Po
