Add tskit headers to sources.  They now get included in "make dist".

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -28,7 +28,19 @@ tskit_SOURCES=../subprojects/nongpl/tskit/c/tskit/convert.c \
 			  ../subprojects/nongpl/tskit/c/tskit/stats.c \
 			  ../subprojects/nongpl/tskit/c/tskit/tables.c \
 			  ../subprojects/nongpl/tskit/c/tskit/trees.c \
-			  ../subprojects/nongpl/tskit/c/subprojects/kastore/kastore.c
+			  ../subprojects/nongpl/tskit/c/subprojects/kastore/kastore.c \
+			  ../subprojects/nongpl/tskit/c/tskit.h \
+	  		  ../subprojects/nongpl/tskit/c/tskit/convert.h \
+		  	  ../subprojects/nongpl/tskit/c/tskit/core.h \
+	  		  ../subprojects/nongpl/tskit/c/tskit/genotypes.h \
+		  	  ../subprojects/nongpl/tskit/c/tskit/haplotype_matching.h \
+	  		  ../subprojects/nongpl/tskit/c/tskit/stats.h \
+	  		  ../subprojects/nongpl/tskit/c/tskit/tables.h \
+	  		  ../subprojects/nongpl/tskit/c/tskit/trees.h \
+	  		  ../subprojects/nongpl/tskit/c/tskit/trees.h \
+	  		  ../subprojects/nongpl/tskit/c/subprojects/kastore/kastore.h
+
+
 edge_buffering_SOURCES=edge_buffering.cc \
 					   $(tskit_SOURCES)
 
