--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -308,7 +308,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = simplification recording
+SUBDIRS = simplification recording detail recording marginal_tree_functions
 pkginclude_HEADERS = definitions.hpp \
 			node.hpp \
 			edge.hpp \
@@ -319,6 +319,7 @@ pkginclude_HEADERS = definitions.hpp \
 			table_simplifier.hpp \
 			simplify_tables.hpp \
 			get_parent_ids.hpp \
+			generate_offspring.hpp \
 			generate_data_matrix.hpp \
 			indexed_edge.hpp \
 			marginal_tree.hpp \
