Add namespace fwdpp::enum_bitflags.

--- a/fwdpp/util/Makefile.am
+++ b/fwdpp/util/Makefile.am
@@ -1,5 +1,6 @@
 pkgincludedir=$(prefix)/include/fwdpp/util
 
-pkginclude_HEADERS=abstract_cloneable.hpp
+pkginclude_HEADERS=abstract_cloneable.hpp \
+				   enum_bitflags.hpp
 
 
