--- a/fwdpp/util/Makefile.in
+++ b/fwdpp/util/Makefile.in
@@ -266,7 +266,9 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkginclude_HEADERS = abstract_cloneable.hpp
+pkginclude_HEADERS = abstract_cloneable.hpp \
+				   enum_bitflags.hpp
+
 all: all-am
 
 .SUFFIXES:
